--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
+    <title>Bulma</title>
 </head>
 <body>
     <div class="columns">
-        <div class="column">First column</div>
-        <div class="column">Second column</div>
-        <div class="column">Third column</div>
-        <div class="column">Fourth column</div>
+        <div class="column">Backlog</div>
+
+        <div class="column">To Do</div>
+
+        <div class="column">In Progress</div>
+        
+        <div class="column">Blocked</div>
+
+        <div class="column">Done</div>
+
+
       </div>
     
 </body>
