--- a/index.html
+++ b/index.html
@@ -3,22 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bulma</title>
+    <title>Bulma Task Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="columns">
-        <div class="column">Backlog</div>
+        <div class="column">
+            <h2 class="title is-4">Backlog</h2>
+            <form>
+                <div class="field">
+                    <label class="label">Título</label>
+                    <div class="control">
+                        <input class="input" type="text" placeholder="Título de la tarea">
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Descripción</label>
+                    <div class="control">
+                        <textarea class="textarea" placeholder="Descripción de la tarea"></textarea>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Asignado</label>
+                    <div class="control">
+                        <div class="select">
+                            <select>
+                                <option>Persona 1</option>
+                                <option>Persona 2</option>
+                                <option>Persona 3</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Prioridad</label>
+                    <div class="control">
+                        <div class="select">
+                            <select>
+                                <option>Baja</option>
+                                <option>Media</option>
+                                <option>Alta</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Estado</label>
+                    <div class="control">
+                        <div class="select">
+                            <select>
+                                <option>Backlog</option>
+                                <option>To Do</option>
+                                <option>In Progress</option>
+                                <option>Blocked</option>
+                                <option>Done</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">Fecha límite</label>
+                    <div class="control">
+                        <input class="input" type="date">
+                    </div>
+                </div>
+            </form>
+        </div>
 
-        <div class="column">To Do</div>
+        <div class="column">
+            <h2 class="title is-4">To Do</h2>
+        </div>
 
-        <div class="column">In Progress</div>
+        <div class="column">
+            <h2 class="title is-4">In Progress</h2>
+        </div>
         
-        <div class="column">Blocked</div>
+        <div class="column">
+            <h2 class="title is-4">Blocked</h2>
+        </div>
 
-        <div class="column">Done</div>
-
-
-      </div>
-    
+        <div class="column">
+            <h2 class="title is-4">Done</h2>
+        </div>
+    </div>
 </body>
 </html>
