agrego ejemplos de cards

--- a/index.html
+++ b/index.html
@@ -72,20 +72,30 @@
         <div class="column">
             <h2 class="title is-4">In Progress</h2>
             <div class="box">
-                <h3 class="title is-5">Título de la Tarea</h3>
-                <p>Descripción de la tarea...</p>
-                <p><strong>Asignado a:</strong> Persona 1</p>
+                <h3 class="title is-5">Desarrollo del módulo de autenticación</h3>
+                <p>Implementar el inicio de sesión y registro de usuarios con Firebase.</p>
+                <p><strong>Asignado a:</strong> Jorge Rodríguez</p>
                 <p><strong>Prioridad:</strong> Alta</p>
+                <p><strong>Fecha límite:</strong> 2024-08-31</p>
+            </div>
+
+            <div class="box">
+                <h3 class="title is-5">Pruebas unitarias del módulo de transacciones</h3>
+                <p>Escribir y ejecutar pruebas unitarias para la funcionalidad de transacciones.</p>
+                <p><strong>Asignado a:</strong> Roberto Magallanes</p>
+                <p><strong>Prioridad:</strong> Baja</p>
                 <p><strong>Fecha límite:</strong> 2024-08-31</p>
             </div>
                     </div>
 
+        
+
         <div class="column">
             <h2 class="title is-4">Blocked</h2>
             <div class="box">
-                <h3 class="title is-5">Título de la Tarea</h3>
-                <p>Descripción de la tarea...</p>
-                <p><strong>Asignado a:</strong> Persona 1</p>
+                <h3 class="title is-5">Integración con API bancaria</h3>
+                <p>Esperando acceso a la API de un banco para la integración de datos.</p>
+                <p><strong>Asignado a:</strong> Alberto Fernández</p>
                 <p><strong>Prioridad:</strong> Alta</p>
                 <p><strong>Fecha límite:</strong> 2024-08-31</p>
             </div>
@@ -94,9 +104,9 @@
         <div class="column">
             <h2 class="title is-4">Done</h2>
             <div class="box">
-                <h3 class="title is-5">Título de la Tarea</h3>
-                <p>Descripción de la tarea...</p>
-                <p><strong>Asignado a:</strong> Persona 1</p>
+                <h3 class="title is-5">Prototipo de la pantalla de inicio</h3>
+                <p>Prototipo interactivo de la pantalla de inicio finalizado y aprobado.</p>
+                <p><strong>Asignado a:</strong> Javier Rodríguez</p>
                 <p><strong>Prioridad:</strong> Alta</p>
                 <p><strong>Fecha límite:</strong> 2024-08-31</p>
             </div>
