css con blakc mode
1er ntento de implementar un dark mode y actualizaciones de estilo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,19 +33,21 @@
         }
     </style>
 </head>
+
 <body>
     <section class="section">
         <div class="container">
             <h1 class="title has-text-centered">Task Manager</h1>
             <button class="button is-primary new-task-button">Add New Task</button>
-            
+
             <div class="columns is-mobile">
                 <!-- Column 1: Backlog -->
                 <div class="column">
                     <h2 class="title is-4">Backlog</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Investigación de mercado</h3>
-                        <p>Investigar aplicaciones de finanzas personales competidoras y evaluar sus características.</p>
+                        <p>Investigar aplicaciones de finanzas personales competidoras y evaluar sus características.
+                        </p>
                         <p><strong>Asignado a:</strong> Juan Gonzalez</p>
                         <p><strong>Prioridad:</strong> Alta</p>
                         <p><strong>Fecha límite:</strong> 2024-08-31</p>
@@ -176,4 +179,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
