--- a/index.html
+++ b/index.html
@@ -171,6 +171,20 @@
                             <button class="button is-light" type="button" id="cancelTask">Cancel</button>
                         </div>
                     </div>
+                    <div class="field">
+                        <label class="label">State</label>
+                        <div class="control">
+                            <div class="select">
+                                <select id="taskState">
+                                    <option>Backlog</option>
+                                    <option>To Do</option>
+                                    <option>In Progress</option>
+                                    <option>Blocked</option>
+                                    <option>Done</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
