--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <div class="columns is-mobile" id="taskColumns">
                 <!-- Column 1: Backlog -->
-                <div class="column" id="backlog">
+                <div class="column" id="backlog" data-state="Backlog">
                     <h2 class="title is-4">Backlog</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Investigación de mercado</h3>
@@ -61,7 +61,7 @@
                 </div>
 
                 <!-- Column 2: To Do -->
-                <div class="column" id="todo">
+                <div class="column" id="todo" data-state="To Do">
                     <h2 class="title is-4">To Do</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Especificación de casos de uso</h3>
@@ -73,7 +73,7 @@
                 </div>
 
                 <!-- Column 3: In Progress -->
-                <div class="column" id="in-progress">
+                <div class="column" id="in-progress" data-state="In Progress">
                     <h2 class="title is-4">In Progress</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Desarrollo del módulo de autenticación</h3>
@@ -85,7 +85,7 @@
                 </div>
 
                 <!-- Column 4: Blocked -->
-                <div class="column" id="blocked">
+                <div class="column" id="blocked" data-state="Blocked">
                     <h2 class="title is-4">Blocked</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Integración con API bancaria</h3>
@@ -97,7 +97,7 @@
                 </div>
 
                 <!-- Column 5: Done -->
-                <div class="column" id="done">
+                <div class="column" id="done" data-state="Done">
                     <h2 class="title is-4">Done</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Prototipo de la pantalla de inicio</h3>
