--- a/index.html
+++ b/index.html
@@ -7,31 +7,6 @@
     <title>Task Manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-
-    <style>
-        /* Estilos para asegurar la responsividad mobile-first */
-        .columns {
-            overflow-x: scroll;
-            display: flex;
-            flex-wrap: nowrap;
-        }
-
-        .column {
-            min-width: 300px;
-            margin-right: 10px;
-        }
-
-        @media (min-width: 768px) {
-            .columns {
-                flex-wrap: wrap;
-            }
-
-            .column {
-                flex: 1;
-                min-width: unset;
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -39,21 +14,15 @@
         <div class="container">
             <h1 class="title has-text-centered">Task Manager</h1>
             <button class="button is-primary new-task-button">Add New Task</button>
+            <button class="button is-light" id="darkModeToggle">Dark Mode</button>
 
-            <div class="columns is-mobile" id="taskColumns">
+            <div class="columns is-mobile is-multiline" id="taskColumns">
                 <!-- Column 1: Backlog -->
-                <div class="column" id="backlog" data-state="Backlog">
+                <div class="column is-one-fifth" id="backlog" data-state="Backlog">
                     <h2 class="title is-4">Backlog</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Investigación de mercado</h3>
-                        <p>Investigar aplicaciones de finanzas personales competidoras y evaluar sus características.</p>
-                        <p><strong>Asignado a:</strong> Juan Gonzalez</p>
-                        <p><strong>Prioridad:</strong> Alta</p>
-                        <p><strong>Fecha límite:</strong> 2024-08-31</p>
-                    </div>
-                    <div class="box" draggable="true">
-                        <h3 class="title is-5">Recopilación de requerimientos</h3>
-                        <p>Reunir los requerimientos del cliente para la funcionalidad de la aplicación.</p>
+                        <p>Investigar aplicaciones de finanzas personales competidoras.</p>
                         <p><strong>Asignado a:</strong> Juan Gonzalez</p>
                         <p><strong>Prioridad:</strong> Alta</p>
                         <p><strong>Fecha límite:</strong> 2024-08-31</p>
@@ -61,7 +30,7 @@
                 </div>
 
                 <!-- Column 2: To Do -->
-                <div class="column" id="todo" data-state="To Do">
+                <div class="column is-one-fifth" id="todo" data-state="To Do">
                     <h2 class="title is-4">To Do</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Especificación de casos de uso</h3>
@@ -73,7 +42,7 @@
                 </div>
 
                 <!-- Column 3: In Progress -->
-                <div class="column" id="in-progress" data-state="In Progress">
+                <div class="column is-one-fifth" id="in-progress" data-state="In Progress">
                     <h2 class="title is-4">In Progress</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Desarrollo del módulo de autenticación</h3>
@@ -85,7 +54,7 @@
                 </div>
 
                 <!-- Column 4: Blocked -->
-                <div class="column" id="blocked" data-state="Blocked">
+                <div class="column is-one-fifth" id="blocked" data-state="Blocked">
                     <h2 class="title is-4">Blocked</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Integración con API bancaria</h3>
@@ -97,7 +66,7 @@
                 </div>
 
                 <!-- Column 5: Done -->
-                <div class="column" id="done" data-state="Done">
+                <div class="column is-one-fifth" id="done" data-state="Done">
                     <h2 class="title is-4">Done</h2>
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Prototipo de la pantalla de inicio</h3>
@@ -162,14 +131,6 @@
                             <input class="input" type="date" id="taskDueDate" required>
                         </div>
                     </div>
-                    <div class="field is-grouped">
-                        <div class="control">
-                            <button class="button is-link" type="submit">Save Task</button>
-                        </div>
-                        <div class="control">
-                            <button class="button is-light" type="button" id="cancelTask">Cancel</button>
-                        </div>
-                    </div>
                     <div class="field">
                         <label class="label">State</label>
                         <div class="control">
@@ -182,6 +143,14 @@
                                     <option>Done</option>
                                 </select>
                             </div>
+                        </div>
+                    </div>
+                    <div class="field is-grouped">
+                        <div class="control">
+                            <button class="button is-link" type="submit">Save Task</button>
+                        </div>
+                        <div class="control">
+                            <button class="button is-light" type="button" id="cancelTask">Cancel</button>
                         </div>
                     </div>
                 </form>
