--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <!-- Column 1: Backlog -->
                 <div class="column is-one-fifth" id="backlog" data-state="Backlog">
                     <h2 class="title is-4">Backlog</h2>
+                    <!-- Example task -->
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Investigación de mercado</h3>
                         <p>Investigar aplicaciones de finanzas personales competidoras.</p>
@@ -32,6 +33,7 @@
                 <!-- Column 2: To Do -->
                 <div class="column is-one-fifth" id="todo" data-state="To Do">
                     <h2 class="title is-4">To Do</h2>
+                    <!-- Example task -->
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Especificación de casos de uso</h3>
                         <p>Escribir los casos de uso para la funcionalidad de seguimiento de gastos.</p>
@@ -44,6 +46,7 @@
                 <!-- Column 3: In Progress -->
                 <div class="column is-one-fifth" id="in-progress" data-state="In Progress">
                     <h2 class="title is-4">In Progress</h2>
+                    <!-- Example task -->
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Desarrollo del módulo de autenticación</h3>
                         <p>Implementar el inicio de sesión y registro de usuarios con Firebase.</p>
@@ -56,6 +59,7 @@
                 <!-- Column 4: Blocked -->
                 <div class="column is-one-fifth" id="blocked" data-state="Blocked">
                     <h2 class="title is-4">Blocked</h2>
+                    <!-- Example task -->
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Integración con API bancaria</h3>
                         <p>Esperando acceso a la API de un banco para la integración de datos.</p>
@@ -68,6 +72,7 @@
                 <!-- Column 5: Done -->
                 <div class="column is-one-fifth" id="done" data-state="Done">
                     <h2 class="title is-4">Done</h2>
+                    <!-- Example task -->
                     <div class="box" draggable="true">
                         <h3 class="title is-5">Prototipo de la pantalla de inicio</h3>
                         <p>Prototipo interactivo de la pantalla de inicio finalizado y aprobado.</p>
