Task assigned arreglado

--- a/index.html
+++ b/index.html
@@ -96,15 +96,7 @@
                     <div class="field">
                         <label class="label">Assigned to</label>
                         <div class="control">
-                            <div class="select">
-                                <select id="taskAssigned">
-                                    <option>Juan Gonzalez</option>
-                                    <option>Ricardo Martínez</option>
-                                    <option>Jorge Rodríguez</option>
-                                    <option>Alberto Fernández</option>
-                                    <option>Javier Rodríguez</option>
-                                </select>
-                            </div>
+                            <input class="input" type="text" id="taskAssigned" required>
                         </div>
                     </div>
                     <div class="field">
