--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="column is-one-fifth" id="backlog" data-state="Backlog">
                     <h2 class="title is-4">Backlog</h2>
                     <div class="box" draggable="true">
+                        <h4 id="highPriority">  </h4>
                         <h3 class="title is-5">Investigación de mercado</h3>
                         <p>Investigar aplicaciones de finanzas personales competidoras.</p>
                         <p><strong>Asignado a:</strong> Juan Gonzalez</p>
@@ -31,6 +32,7 @@
                 <div class="column is-one-fifth" id="todo" data-state="To Do">
                     <h2 class="title is-4">To Do</h2>
                     <div class="box" draggable="true">
+                        <h4 id="highPriority">  </h4>
                         <h3 class="title is-5">Especificación de casos de uso</h3>
                         <p>Escribir los casos de uso para la funcionalidad de seguimiento de gastos.</p>
                         <p><strong>Asignado a:</strong> Ricardo Martínez</p>
@@ -42,6 +44,7 @@
                 <div class="column is-one-fifth" id="in-progress" data-state="In Progress">
                     <h2 class="title is-4">In Progress</h2>
                     <div class="box" draggable="true">
+                        <h4 id="highPriority">  </h4>
                         <h3 class="title is-5">Desarrollo del módulo de autenticación</h3>
                         <p>Implementar el inicio de sesión y registro de usuarios con Firebase.</p>
                         <p><strong>Asignado a:</strong> Jorge Rodríguez</p>
@@ -53,6 +56,7 @@
                 <div class="column is-one-fifth" id="blocked" data-state="Blocked">
                     <h2 class="title is-4">Blocked</h2>
                     <div class="box" draggable="true">
+                        <h4 id="highPriority">  </h4>
                         <h3 class="title is-5">Integración con API bancaria</h3>
                         <p>Esperando acceso a la API de un banco para la integración de datos.</p>
                         <p><strong>Asignado a:</strong> Alberto Fernández</p>
@@ -64,6 +68,7 @@
                 <div class="column is-one-fifth" id="done" data-state="Done">
                     <h2 class="title is-4">Done</h2>
                     <div class="box" draggable="true">
+                        <h4 id="highPriority">  </h4>
                         <h3 class="title is-5">Prototipo de la pantalla de inicio</h3>
                         <p>Prototipo interactivo de la pantalla de inicio finalizado y aprobado.</p>
                         <p><strong>Asignado a:</strong> Javier Rodríguez</p>
