--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <section class="section">
         <div class="container">
             <h1 class="title has-text-centered">Task Manager</h1>
+            <div class="field has-addons">
+                <div class="control is-expanded">
+                    <input class="input" type="text" id="searchBar" placeholder="Search tasks...">
+                </div>
+                <div class="control">
+                    <button class="button is-info" id="searchButton">Search</button>
+                </div>
+            </div>
             <button class="button is-primary new-task-button">Add New Task</button>
             <button class="button is-light" id="darkModeToggle">Dark Mode</button>
 
@@ -20,7 +28,7 @@
                 <div class="column is-one-fifth" id="backlog" data-state="Backlog">
                     <h2 class="title is-4">Backlog</h2>
                     <div class="box" draggable="true">
-                        <h4 id="highPriority">  </h4>
+                        <h4 id="highPriority" class="priority-indicator"></h4>
                         <h3 class="title is-5">Investigación de mercado</h3>
                         <p>Investigar aplicaciones de finanzas personales competidoras.</p>
                         <p><strong>Asignado a:</strong> Juan Gonzalez</p>
@@ -32,7 +40,7 @@
                 <div class="column is-one-fifth" id="todo" data-state="To Do">
                     <h2 class="title is-4">To Do</h2>
                     <div class="box" draggable="true">
-                        <h4 id="highPriority">  </h4>
+                        <h4 id="highPriority" class="priority-indicator"></h4>
                         <h3 class="title is-5">Especificación de casos de uso</h3>
                         <p>Escribir los casos de uso para la funcionalidad de seguimiento de gastos.</p>
                         <p><strong>Asignado a:</strong> Ricardo Martínez</p>
@@ -44,7 +52,7 @@
                 <div class="column is-one-fifth" id="in-progress" data-state="In Progress">
                     <h2 class="title is-4">In Progress</h2>
                     <div class="box" draggable="true">
-                        <h4 id="highPriority">  </h4>
+                        <h4 id="highPriority" class="priority-indicator"></h4>
                         <h3 class="title is-5">Desarrollo del módulo de autenticación</h3>
                         <p>Implementar el inicio de sesión y registro de usuarios con Firebase.</p>
                         <p><strong>Asignado a:</strong> Jorge Rodríguez</p>
@@ -56,7 +64,7 @@
                 <div class="column is-one-fifth" id="blocked" data-state="Blocked">
                     <h2 class="title is-4">Blocked</h2>
                     <div class="box" draggable="true">
-                        <h4 id="highPriority">  </h4>
+                        <h4 id="highPriority" class="priority-indicator"></h4>
                         <h3 class="title is-5">Integración con API bancaria</h3>
                         <p>Esperando acceso a la API de un banco para la integración de datos.</p>
                         <p><strong>Asignado a:</strong> Alberto Fernández</p>
@@ -68,7 +76,7 @@
                 <div class="column is-one-fifth" id="done" data-state="Done">
                     <h2 class="title is-4">Done</h2>
                     <div class="box" draggable="true">
-                        <h4 id="highPriority">  </h4>
+                        <h4 id="highPriority" class="priority-indicator"></h4>
                         <h3 class="title is-5">Prototipo de la pantalla de inicio</h3>
                         <p>Prototipo interactivo de la pantalla de inicio finalizado y aprobado.</p>
                         <p><strong>Asignado a:</strong> Javier Rodríguez</p>
