--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                         <p><strong>Asignado a:</strong> Juan Gonzalez</p>
                         <p><strong>Prioridad:</strong> Alta</p>
                         <p><strong>Fecha límite:</strong> 2024-08-31</p>
+                        <div class="task-actions">
+                            <button class="button is-info edit-task-button">Edit</button>
+                            <button class="button is-danger delete-task-button">Delete</button>
+                        </div>
                     </div>
                 </div>
 
@@ -46,6 +50,10 @@
                         <p><strong>Asignado a:</strong> Ricardo Martínez</p>
                         <p><strong>Prioridad:</strong> Alta</p>
                         <p><strong>Fecha límite:</strong> 2024-09-05</p>
+                        <div class="task-actions">
+                            <button class="button is-info edit-task-button">Edit</button>
+                            <button class="button is-danger delete-task-button">Delete</button>
+                        </div>
                     </div>
                 </div>
 
@@ -58,6 +66,10 @@
                         <p><strong>Asignado a:</strong> Jorge Rodríguez</p>
                         <p><strong>Prioridad:</strong> Alta</p>
                         <p><strong>Fecha límite:</strong> 2024-08-31</p>
+                        <div class="task-actions">
+                            <button class="button is-info edit-task-button">Edit</button>
+                            <button class="button is-danger delete-task-button">Delete</button>
+                        </div>
                     </div>
                 </div>
 
@@ -70,6 +82,10 @@
                         <p><strong>Asignado a:</strong> Alberto Fernández</p>
                         <p><strong>Prioridad:</strong> Alta</p>
                         <p><strong>Fecha límite:</strong> 2024-08-31</p>
+                        <div class="task-actions">
+                            <button class="button is-info edit-task-button">Edit</button>
+                            <button class="button is-danger delete-task-button">Delete</button>
+                        </div>
                     </div>
                 </div>
 
@@ -82,6 +98,10 @@
                         <p><strong>Asignado a:</strong> Javier Rodríguez</p>
                         <p><strong>Prioridad:</strong> Alta</p>
                         <p><strong>Fecha límite:</strong> 2024-08-31</p>
+                        <div class="task-actions">
+                            <button class="button is-info edit-task-button">Edit</button>
+                            <button class="button is-danger delete-task-button">Delete</button>
+                        </div>
                     </div>
                 </div>
             </div>
