Arreglo del to do

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
 
-                <div class="column is-one-fifth" id="todo" data-state="To Do">
+                <div class="column is-one-fifth" id="to-do" data-state="To Do">
                     <h2 class="title is-4">To Do</h2>
                     <div class="box" draggable="true">
                         <h4 id="highPriority" class="priority-indicator"></h4>
